# my-hft-robot

./: .gitignore  ARCHITECTURE.md  CONTEXT_RESTORE.md  Dockerfile  check_build.py  docker-compose.yml  init_config.py  pyproject.toml  requirements.txt  test_bybit.py  test_connection.py
.kilocode/rules/: Workspace Rules.txt
.tmp.driveupload/: 274201  274205  274209  274213  274217  274221  274225  274229
commander/: __init__.py  main.py  requirements.txt
config/: strategy_params.json
cpp_src/: CMakeLists.txt
cpp_src/include/: exchange_streamer.hpp  order_gateway.hpp
cpp_src/include/entities/: execution_data.hpp
cpp_src/include/parsers/: imessage_parser.hpp
cpp_src/src/: exchange_streamer.cpp  main.cpp  order_gateway.cpp
cpp_src/src/parsers/: binance_parser.cpp  bybit_parser.cpp
hft_core/: CMakeLists.txt
hft_core/include/: exchange_streamer.hpp
hft_core/include/entities/: Ticker_data.hpp  execution_data.hpp  market_depth.hpp  tick_data.hpp
hft_core/include/parsers/: binance_parser.hpp  bybit_parser.hpp  imessage_parser.hpp
hft_core/src/: exchange_streamer.cpp  main.cpp  order_gateway.cpp
hft_core/src/parsers/: binance_parser.cpp  bybit_parser.cpp
hft_core/tests/: test_streamer.py
hft_strategy/: analyze.py  analyze_results.py  analyze_stats.py  audit_data.py  backtest.py  backtest_bot.py  backtest_clean.py  backtest_main.py  batch_optimizer.py  check_data_format.py  check_time_range.py  config.py  convert_bybit_v2.py  convert_data.py  convert_to_npy.py  create_small_dataset.py  db_migration.py  db_writer.py  debug_backtest.py  deep_clean_and_verify.py  diagnose_start.py  diagnose_zero_steps.py  export_data.py  final_resurrection.py  find_breaking.py  fix_all_zeros.py  fix_data_v2_final.py  fix_flags_critical.py  fix_genesis_sides.py  fix_initial_snapshot.py  fix_price_artifact.py  flag_doctor.py  force_genesis_book.py  heal_sides_heuristic.py  inspect_bulk.py  inspect_genesis.py  inspect_header.py  inspect_npz.py  live_bot.py  main.py  (+12 more)
hft_strategy/domain/: events.py  interfaces.py  market_depth.py  optimized_params.json  strategy_config.py  trade_context.py
hft_strategy/infrastructure/: db_writer.py  execution.py  local_order_book.py  market_bridge.py  serializers.py
hft_strategy/pipelines/: export_data.py
hft_strategy/services/: analytics.py  instrument_provider.py  market_scanner.py  notification.py  smart_scanner.py  trade_manager.py  wall_detector.py
hft_strategy/strategies/: adaptive_backtest.py  adaptive_live_strategy.py  live_strategy.py  wall_bounce.py
tests/: test_bybit.py
